fix lupes z-index

--- a/src/styles/pages--external/main.less
+++ b/src/styles/pages--external/main.less
@@ -278,6 +278,7 @@ label{
         position: absolute;
         top: 125px;
         transition-delay: 1s;
+        z-index: 1001;
         &:nth-child(2){
           top: 275px;
           transition-delay: 1.3s;
@@ -357,8 +358,8 @@ label{
             left: -10px;
           }
           &:nth-child(3){
-            top: 345px;
-            left: 105px;
+            top: 355px;
+            left: 100px;
           }
           &:nth-child(4){
             top: 490px;
@@ -402,7 +403,7 @@ label{
   .lupes{
     position: absolute;
     top: 0;
-    z-index: 1000;
+    z-index: 1001;
     left: ~"calc(50% - 0px)";
     width: 43px;
   }
